WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243652
Navigator.share() rejects with wrong exception when called multiple times
https://bugs.webkit.org/show_bug.cgi?id=243652
Summary
Navigator.share() rejects with wrong exception when called multiple times
Marcos Caceres
Reported
2022-08-07 23:45:25 PDT
A Web Share related web platform test is failing because WebKit is returning NotAllowedError instead of InvalidStateError DOM Exception.
https://wpt.fyi/results/web-share/share-sharePromise-internal-slot.https.html?label=master&label=experimental&aligned
Attachments
Add attachment
proposed patch, testcase, etc.
Marcos Caceres
Comment 1
2022-08-08 21:06:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3137
Radar WebKit Bug Importer
Comment 2
2022-08-14 23:46:15 PDT
<
rdar://problem/98656307
>
EWS
Comment 3
2022-08-15 01:00:29 PDT
Committed
253419@main
(7654da12692d): <
https://commits.webkit.org/253419@main
> Reviewed commits have been landed. Closing PR #3137 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug