Navigator.share() rejects with wrong exception when called multiple times https://bugs.webkit.org/show_bug.cgi?id=243652

Reviewed by Chris Dumez.

Unfortunately, `run-webkit-tests` doesn't cause `isControlledByAutomation()`
to return `true`, so we can't test this directly. Instead, it needs to be run
with directly with web driver (as is done on WPT).

* LayoutTests/platform/ios-simulator-wk2/imported/w3c/web-platform-tests/web-share/share-sharePromise-internal-slot.https-expected.txt: Renamed from LayoutTests/platform/ios-simulator-wk2/share-sharePromise-internal-slot.https-expected.txt.
* LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/web-share/share-sharePromise-internal-slot.https-expected.txt: Renamed from LayoutTests/platform/ios-wk2/share-sharePromise-internal-slot.https-expected.txt.
* Source/WebCore/page/Navigator.cpp:
(WebCore::Navigator::share):
(WebCore::Navigator::showShareData):

Canonical link: https://commits.webkit.org/253419@main